--- a/hdi_express_sale/views/menu.xml
+++ b/hdi_express_sale/views/menu.xml
@@ -10,14 +10,14 @@
   <menuitem id="hdi_express_dashboard"
     name="Trang chủ"
     parent="hdi_express"
-    action="hdi_sale.action_shipping_dashboard_owl"
+    action="hdi_express_sale.action_shipping_dashboard_owl"
     sequence="5"/>
 
   <!-- Menu tạo phiếu gửi hàng -->
   <menuitem id="sale_order_hdi_create"
     name="Tạo phiếu gửi hàng"
     parent="hdi_express"
-    action="hdi_sale.action_hdi_sale_order"
+    action="hdi_express_sale.action_hdi_sale_order"
     sequence="10"/>
 
   <!-- Menu Quản lý -->
@@ -30,7 +30,7 @@
   <menuitem id="hdi_express_manage_send"
     name="Quản lý đơn hàng gửi"
     parent="hdi_express_manage"
-    action="hdi_sale.action_hdi_sale_order"
+    action="hdi_express_sale.action_hdi_sale_order"
     sequence="10"/>
 
   <!-- Menu con: Quản lý đơn hàng nhận -->
@@ -77,13 +77,13 @@
   <menuitem id="hdi_shipping_services"
     name="Dịch vụ vận chuyển"
     parent="hdi_express_config"
-    action="hdi_sale.action_main_shipping_service"
+    action="hdi_express_sale.action_main_shipping_service"
     sequence="10"/>
 
   <!-- Menu con: Dịch vụ cộng thêm -->
   <menuitem id="hdi_additional_shipping_services"
     name="Dịch vụ cộng thêm"
     parent="hdi_express_config"
-    action="hdi_sale.action_additional_shipping_service"
+    action="hdi_express_sale.action_additional_shipping_service"
     sequence="20"/>
 </odoo>
