--- a/hdi_express_sale/views/menu.xml
+++ b/hdi_express_sale/views/menu.xml
@@ -17,7 +17,7 @@
   <menuitem id="sale_order_hdi_create"
     name="Tạo phiếu gửi hàng"
     parent="hdi_express"
-    action="hdi_express_sale.action_hdi_sale_order"
+    action="hdi_express_sale.action_create_shipping_order"
     sequence="10"/>
 
   <!-- Menu Quản lý -->
