--- a/hdi_express_sale/views/menu.xml
+++ b/hdi_express_sale/views/menu.xml
@@ -73,6 +73,13 @@
     parent="hdi_express"
     sequence="40"/>
 
+  <!-- Menu -->
+  <menuitem id="menu_sender_config"
+    name="Địa chỉ Gửi hàng"
+    parent="hdi_express_config"
+    action="action_sender_config"
+    sequence="5"/>
+
   <!-- Menu con: Dịch vụ vận chuyển -->
   <menuitem id="hdi_shipping_services"
     name="Dịch vụ vận chuyển"
