Add sender phone and address fields to shipping order search

--- a/hdi_express_sale/views/express_order_search_views.xml
+++ b/hdi_express_sale/views/express_order_search_views.xml
@@ -26,6 +26,8 @@
               </group>
               <group string="Người gửi">
                 <field name="sender_name" readonly="1"/>
+                <field name="sender_phone" readonly="1"/>
+                <field name="sender_address" readonly="1"/>
               </group>
             </group>
 
