--- a/hdi_express_sale/views/menu.xml
+++ b/hdi_express_sale/views/menu.xml
@@ -60,12 +60,19 @@
     parent="hdi_express"
     sequence="30"/>
 
-  <!-- Menu con: Tìm kiếm phiếu gửi -->
+  <!-- Menu con: Tìm kiếm phiếu gửi theo mã -->
   <menuitem id="hdi_express_search_order"
-    name="Tìm kiếm phiếu gửi"
+    name="Tìm kiếm theo Mã"
     parent="hdi_express_search"
     action="action_shipping_order_search"
     sequence="10"/>
+
+  <!-- Menu con: Tìm kiếm phiếu gửi theo ngày -->
+  <menuitem id="hdi_express_search_order_by_date"
+    name="Tìm kiếm theo Ngày Tạo"
+    parent="hdi_express_search"
+    action="action_shipping_order_search_by_date"
+    sequence="20"/>
 
   <!-- Menu Cấu hình -->
   <menuitem id="hdi_express_config"
