fix: correct views XML and menu action references
- Remove duplicate goods_description field in code search form
- Fix tree view to use proper separator for results list
- Add module prefixes to all action references in menu.xml (hdi_express_sale.action_*)
- Ensure tree fields properly reference shipping.order model fields

--- a/hdi_express_sale/views/menu.xml
+++ b/hdi_express_sale/views/menu.xml
@@ -84,7 +84,7 @@
   <menuitem id="menu_sender_config"
     name="Địa chỉ Gửi hàng"
     parent="hdi_express_config"
-    action="action_sender_config"
+    action="hdi_express_sale.action_sender_config"
     sequence="5"/>
 
   <!-- Menu con: Dịch vụ vận chuyển -->
