--- a/hdi_express_sale/views/express_order_search_views.xml
+++ b/hdi_express_sale/views/express_order_search_views.xml
@@ -23,7 +23,7 @@
                  <field name="order_code" readonly="1"/>
                 <field name="state" readonly="1"/>
               </group>
-              <group>
+              <group string="Nội dung hàng">
                  <field name="goods_description" readonly="1"/>
               </group>
             </group>
@@ -94,18 +94,17 @@
             </group>
           </group>
 
-          <group colspan="4">
-            <field name="order_ids" nolabel="1" colspan="4">
-              <tree string="Danh sách kết quả" editable="false">
-                <field name="code" string="Mã phiếu"/>
-                <field name="create_date" string="Ngày tạo"/>
-                <field name="sender_name" string="Người gửi"/>
-                <field name="receiver_name" string="Người nhận"/>
-                <field name="state" string="Trạng thái"/>
-                <field name="total_shipping_fee" string="Tổng cước"/>
-              </tree>
-            </field>
-          </group>
+          <separator string="Danh sách kết quả" colspan="4"/>
+          <field name="order_ids" nolabel="1" colspan="4">
+            <tree string="Danh sách kết quả" editable="false" create="false" delete="false">
+              <field name="code" string="Mã phiếu"/>
+              <field name="create_date" string="Ngày tạo"/>
+              <field name="sender_name" string="Người gửi"/>
+              <field name="receiver_name" string="Người nhận"/>
+              <field name="state" string="Trạng thái"/>
+              <field name="total_shipping_fee" string="Tổng cước"/>
+            </tree>
+          </field>
         </sheet>
 
         <footer>
