--- a/hdi_express_sale/views/express_order_search_views.xml
+++ b/hdi_express_sale/views/express_order_search_views.xml
@@ -71,27 +71,25 @@
     <field name="help">Tìm kiếm một phiếu gửi hàng theo mã</field>
   </record>
 
-  <!-- View 2: Search by Date (Multiple Records) -->
+ <!-- View 2: Search by Date (Multiple Records) -->
   <record id="view_shipping_order_search_by_date_form" model="ir.ui.view">
     <field name="name">Tìm kiếm Phiếu Gửi Hàng theo Ngày Tạo</field>
     <field name="model">shipping.order.search.by.date</field>
     <field name="arch" type="xml">
       <form create="false" delete="false">
         <sheet>
-          <group>
+          <group string="Bộ lọc tìm kiếm">
             <group>
               <field name="date_from"/>
-            </group>
-            <group>
               <field name="date_to"/>
             </group>
-            <group>
-              <button name="action_search"
-                string="Tìm kiếm"
-                type="object"
-                class="btn-primary"
-                icon="fa-search"/>
-            </group>
+          </group>
+          <group>
+            <button name="action_search"
+              string="Tìm kiếm"
+              type="object"
+              class="btn-primary"
+              icon="fa-search"/>
           </group>
 
           <separator string="Danh sách kết quả" colspan="4"/>
@@ -102,6 +100,7 @@
               <field name="sender_name" string="Người gửi"/>
               <field name="receiver_name" string="Người nhận"/>
               <field name="state" string="Trạng thái"/>
+              <field name="payment_status" string="TT Thanh toán"/>
               <field name="total_shipping_fee" string="Tổng cước"/>
             </list>
           </field>
@@ -122,6 +121,6 @@
     <field name="view_mode">form</field>
     <field name="views" eval="[(ref('view_shipping_order_search_by_date_form'), 'form')]"/>
     <field name="target">current</field>
-    <field name="help">Tìm kiếm danh sách phiếu gửi hàng theo khoảng thời gian</field>
+    <field name="help">Tìm kiếm danh sách phiếu gửi hàng theo khoảng thời gian và trạng thái thanh toán</field>
   </record>
 </odoo>
